# tame

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  requirements-doc.txt  setup.py  sitemap.xml  tamerc.template
.circleci/: build_doc.sh  config.yml
.devcontainer/: devcontainer.json
.github/workflows/: build_and_test.yml
about/: index.html
api/: io.md
api/core/: index.html
api/loader/: index.html
api/time/: index.html
api/writer/: index.html
contributing/: index.html
doc/: conf.py  contributing.rst  index.rst  introduction.rst  recipes.rst  tutorial.rst
docs/: about.md  contributing.md  index.md  references.bib
docs/api/: core.md  loader.md  time.md  writer.md
docs/css/: extra.css
docs/developing/: backends.md  concepts.md  overview.md  write_a_recipe.md
docs/lib/: operations.md  ops.md  overview.md
docs/overrides/: home.html
docs/recipe/: cond.md  diff.md  jacf.md  mdc.md  onsager.md  overview.md  persist.md  pmsd.md  rdf.md  restime.md  sfac.md  struct.md
docs/tutorial/: basics.md  overview.md  recipe.md
latest/: 404.html  index.html  objects.inv  references.bib  sitemap.xml
latest/about/: index.html
latest/contributing/: index.html
latest/search/: search_index.json
lib/2d_rdf/: index.html
lib/hydroxyl/: index.html
lib/io/: index.html
lib/operation/: index.html
lib/operations/: index.html
lib/ops/: index.html
master/: 404.html  index.html  sitemap.xml
mdppp/: __init__.py  units.py
tame/: __init__.py  constants.py  fit.py
tests/: test_core.py
(+102 files in other folders)
