[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tame"
dynamic = ["version"]
description = "The Interatomic Potential Suite"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.6"
authors = [
    { name = "Yunqi Shao", email = "yunqi_shao@yahoo.com" },
]
dependencies = [
    "click>=7.0",
    "numpy>1.3.0",
]

[project.optional-dependencies]
doc = [
  "mkdocs-flux[full] @ git+https://github.com/yqshao/mkdocs-flux.git",
]
dev = [
  "pytest==7.2.1",
  "black==23.1.0",
  "mkdocs-flux[full] @ git+https://github.com/yqshao/mkdocs-flux.git",
]

[project.scripts]
tame = "tame.recipes.bin:main"

[project.urls]
Homepage = "https://github.com/yqshao/tame"

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.version]
path = "tame/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true
